# SendR

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .sops.yaml  AGENTS.md  CLOUD_DEPLOYMENT_README.md  Dockerfile  README.md  compose.yaml  mise.toml  openapi.json  renovate.json  setup-git-hooks.sh
.devcontainer/: Dockerfile  devcontainer.json
.githooks/: pre-commit
.opencode/: opencode.json
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: README  env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_add_scan_status.py  8cb9b35cf603_add_transfer_model.py  acf42cd55a38_initial_migration.py  b1c2d3e4f5a6_add_is_admin_to_user.py  c1d2e3f4a5b6_add_upload_group.py  d1e2f3a4b5c6_rename_basic_to_temporary.py  e1f2a3b4c5d6_add_password_hash_to_fileupload.py  f1a2b3c4d5e6_add_multi_access_system.py  g1h2i3j4k5l6_add_title_description_to_group.py  h1i2j3k4l5m6_add_separate_download_counts.py  i1j2k3l4m5n6_add_is_banned_to_user.py  j1k2l3m4n5o6_add_user_login_model.py  k1l2m3n4o5p6_add_content_hash_to_fileupload.py  l1m2n3o4p5q6_add_password_hash_to_user.py
backend/src/: __init__.py  app.py  config.py  database.py  db_migrations.py  email_utils.py  errors.py  migration_bundle.py  migration_cli.py  models.py  rate_limit.py  scan_queue.py  scan_worker.py  schemas.py  security.py  storage.py  tasks.py  virus_scanner.py
backend/src/backend/: __init__.py  app.py  config.py  database.py  models.py  rate_limit.py  schemas.py  security.py  tasks.py
backend/src/backend/routers/: admin.py  altcha.py  auth.py  files.py
backend/src/routers/: admin.py  altcha.py  auth.py  dev.py  files.py  subscription.py
backend/tests/: conftest.py  test_admin.py  test_altcha.py  test_app.py  test_auth.py  test_config.py  test_dev_login.py  test_email_utils.py  test_full_flows.py  test_guest_access.py  test_limits.py  test_migration_bundle.py  test_multi_access.py  test_multi_upload.py  test_subscription.py  test_upload_storage.py  test_virus_scanner.py  utils.py
backend/typings/: clamd.pyi
backend/typings/passlib/: context.pyi  exc.pyi
documentation/: docs.md  flow-diagram.md  owasp-audit-2026-05-17.md
frontend/: AGENTS.md  Dockerfile  README.md  angular.json  docker-entrypoint.sh  karma.conf.cjs  nginx.conf  orval.config.ts  oxlintrc.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json
scripts/: add-sops-recipient.sh  create-secrets.sh  generate-openapi-client.sh  migrate_sqlite_to_postgres.py  run-frontend-oxfmt.sh  run-frontend-oxlint.sh  sync_files_to_spaces.py
terraform/: .gitignore  .terraform.lock.hcl  ENVIRONMENTS_GUIDE.md  Makefile  README.md  SETUP.md  main.tf  outputs.tf  provider.tf  (+3 more)
(+310 files in other folders)
