[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "copilot-swe-agent[bot]", email = "198982749+Copilot@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aioboto3>=15.5.0",
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "altcha>=1.0.0",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.31.0",
    "boto3>=1.40.61",
    "clamd>=1.0.2",
    "fastapi[standard]>=0.135.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.14.2",
    "python-jose[cryptography]>=3.5.0",
    "resend>=2.6.0",
    "sqlmodel>=0.0.37",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "S", "B", "A", "C4", "DTZ", "T20", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TC", "ARG", "PTH", "ERA"]
ignore = ["S101", "S603", "S607", "B008", "S104", "S105"]

[tool.ruff.lint.per-file-ignores]
"alembic/*" = ["ERA001", "TC"]

[tool.pyright]
include = ["src", "tests", "alembic"]
exclude = [".venv"]
extraPaths = ["src"]
stubPath = "typings"
pythonVersion = "3.14"
typeCheckingMode = "strict"
